--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Buss Pass</string>
     <string name="buss_pass">BUSS PASS</string>
+    <string name="login_with_google">LOGIN WITH GOOGLE</string>
+    <string name="login">Login</string>
 </resources>
