--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="buss_pass">BUSS PASS</string>
     <string name="login_with_google">LOGIN WITH GOOGLE</string>
     <string name="login">Login</string>
+    <string name="logout">LogOut</string>
 </resources>
